# BitVeil

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
circuits/: Cargo.toml  LICENSE  README.md
circuits/.cargo/: config.toml
circuits/src/: circuits.rs  lib.rs  main.rs  wasm.rs
src/app/: layout.tsx  page.tsx
src/app/demo/: layout.tsx  page.tsx
src/app/docs/: layout.tsx  page.tsx
src/components/: features-section.tsx  footer-section.tsx  hero-section.tsx  proof-tester-card.tsx  quick-demo-section.tsx  real-time-distance-card.tsx
src/components/ui/: button.tsx
src/lib/: useWasm.ts  wasmHelper.ts
src/lib/wasm/: README.md  circuits.d.ts  circuits.js  circuits_bg.wasm  circuits_bg.wasm.d.ts  package.json
