[package]
name = "circuits"
version = "0.1.0"
edition = "2024"

[lib]
name = "circuits"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[dependencies]
extend = "1.2.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
halo2_proofs = { version = "0.3.1", features = ["dev-graph"] }
js-sys = "0.3.82"
plotters = "0.3.7"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
