[package]
name = "circuits"
version = "0.1.0"
edition = "2024"
description = "Zero-knowledge circuits for BitVeil"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
license = "MIT"
repository = "https://github.com/kunalsinghdadhwal/bitveil"

[lib]
name = "circuits"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0

[dependencies]
console_error_panic_hook = "0.1.7"
extend = "1.2.0"
getrandom = { version = "0.2", features = ["js"] }
halo2_proofs = { version = "0.3.1", default-features = false, features = [
    "dev-graph",
] }
js-sys = "0.3.82"
plotters = "0.3.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
halo2_proofs = { version = "0.3.1", features = ["dev-graph", "multicore"] }

[target.'cfg(target_family = "wasm")'.dependencies]
halo2_proofs = { version = "0.3.1", default-features = false, features = [
    "dev-graph",
] }
